--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
     <script src="./js/data.js" defer></script>
     <script src="./js/helper.js" defer></script>
     <script src="./js/main.js" defer></script>
+    <!-- CDN sweetAlert -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </head>
   <body class="body">
     <header class="header">
