--- a/index.html
+++ b/index.html
@@ -103,6 +103,11 @@
         <div class="card-container-ticket" id="div-card"></div>
       </section>
       <section class="cards-main">
+        <h3>Cotizacion del Dolar</h3>
+        <h2>(fuente: DolarAPI.com)</h2>
+        <div class="card-container-dolar" id="div-dolar"></div>
+      </section>
+      <section class="cards-main">
         <form id="formulario" class="form">
           <!-- <fieldset enabled class="form"> -->
           <legend>Compre su ticket</legend>
